--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-          <li><img src="/images/image(1).jpg" alt="верстка" width="370" /></li>
-          <li><img src="/images/image(2).jpg" alt="дизайн" width="370" /></li>
+          <li><img src="./images/image(1).jpg" alt="верстка" width="370" /></li>
+          <li><img src="./images/image(2).jpg" alt="дизайн" width="370" /></li>
           <li>
-            <img src="/images/image(3).jpg" alt="оформление" width="370" />
+            <img src="./images/image(3).jpg" alt="оформление" width="370" />
           </li>
         </ul>
       </section>
@@ -78,23 +78,31 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="/images/img1.jpg" alt="Член команды Игорь " width="270" />
+            <img
+              src="./images/img1.jpg"
+              alt="Член команды Игорь "
+              width="270"
+            />
             <p>Игорь Демьяненко-Product Designer</p>
           </li>
           <li>
-            <img src="/images/img2.jpg" alt="Член команды Ольга" width="270" />
+            <img src="./images/img2.jpg" alt="Член команды Ольга" width="270" />
             <p>Ольга Репина-Frontend Developer</p>
           </li>
           <li>
             <img
-              src="/images/img3.jpg"
+              src="./images/img3.jpg"
               alt="Член команды Николай"
               width="270"
             />
             <p>Николай Тарасов-Marketing</p>
           </li>
           <li>
-            <img src="/images/img4.jpg" alt="Член команды Михаил" width="270" />
+            <img
+              src="./images/img4.jpg"
+              alt="Член команды Михаил"
+              width="270"
+            />
             <p>Михаил Ермаков-UI Designer</p>
           </li>
         </ul>
