--- a/index.html
+++ b/index.html
@@ -83,11 +83,13 @@
               alt="Член команды Игорь "
               width="270"
             />
-            <p>Игорь Демьяненко-Product Designer</p>
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/img2.jpg" alt="Член команды Ольга" width="270" />
-            <p>Ольга Репина-Frontend Developer</p>
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img
@@ -95,7 +97,8 @@
               alt="Член команды Николай"
               width="270"
             />
-            <p>Николай Тарасов-Marketing</p>
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <img
@@ -103,7 +106,8 @@
               alt="Член команды Михаил"
               width="270"
             />
-            <p>Михаил Ермаков-UI Designer</p>
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
@@ -111,7 +115,7 @@
     <footer>
       <a href="index.html">WebStudio</a>
       <address>
-        г. Киев, пр-т Леси Украинки, 26 <br />
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
         <a href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
