--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-          <li><img src="./images/image(1).jpg" alt="верстка" width="370" /></li>
-          <li><img src="./images/image(2).jpg" alt="дизайн" width="370" /></li>
+          <li><img src="./images/image-1.jpg" alt="верстка" width="370" /></li>
+          <li><img src="./images/image-2.jpg" alt="дизайн" width="370" /></li>
           <li>
-            <img src="./images/image(3).jpg" alt="оформление" width="370" />
+            <img src="./images/image-3.jpg" alt="оформление" width="370" />
           </li>
         </ul>
       </section>
